[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-metro"
version = "0.5.0"
description = "Basic metro models for Django, plus the parser that fills models with actual data (lines numbers, lines titles, lines colors, station names) from various data sources (primary - Wikipedia)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Denis Anikin", email = "ad@xfenix.ru" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Django>=5.2",
    "beautifulsoup4",
    "requests",
]

[project.urls]
Homepage = "https://github.com/xfenix/django-metro"

[dependency-groups]
dev = [
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["metro"]

[tool.hatch.build.targets.sdist]
include = ["metro/", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["metro/migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
